--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,17 @@
     <!-- GRID DE VIDEOJUEGOS -->
     <section>
       <h2 class="text-lg font-semibold mb-4 text-slate-800">Videojuegos destacados</h2>
- 
+
+      <!-- Estado de carga -->
+      <p id="estado-carga" class="text-sm text-slate-500 mb-3 hidden">
+        Cargando videojuegos...
+      </p>
+
+      <!-- Estado de error-->
+      <p id="estado-error" class="text-red-500 mb-3 hidden">
+        Error al cargar videojuegos
+      </p>
+
       <div 
       id="grid-videojuegos"
       class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
