--- a/public/index.html
+++ b/public/index.html
@@ -5,77 +5,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GameZone Store</title>
     <link href="./output.css" rel="stylesheet" />
+    <link rel="icon" href="./favicon.png" />
   </head>
 
   <body class="bg-slate-100 min-h-screen">
-  <!-- HEADER -->
-  <header class="bg-slate-900 text-white px-6 py-4 flex items-center justify-between">
-    <div>
-      <h1 class="text-2xl font-bold tracking-tight">GameZone Store</h1>
-      <p class="text-sm text-slate-200">Catálogo de videojuegos</p>
-    </div>
-    <span class="text-xs text-slate-300">v1.0 · demo educativa</span>
-  </header>
- 
-  <!-- CONTENIDO -->
-  <main class="p-6 max-w-6xl mx-auto">
-    <!-- BARRA DE BÚSQUEDA / CONTROLES -->
-    <section class="mb-6 flex flex-col gap-3 md:flex-row md:items-center md:justify-between">
-      <div class="flex items-center gap-2 w-full md:max-w-md">
-        <input
-          type="text"
-          placeholder="Buscar videojuego..."
-          class="w-full rounded-lg border border-slate-200 px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-slate-400"
-        />
-        <button class="px-4 py-2 bg-slate-900 text-white rounded-lg text-sm hover:bg-slate-800">
-          Buscar
+    <!-- HEADER -->
+    <header class="bg-slate-900 text-white px-6 py-4 flex items-center justify-between">
+      <div>
+        <h1 class="text-2xl font-bold tracking-tight">GameZone Store</h1>
+        <p class="text-sm text-slate-200">Catálogo de videojuegos</p>
+      </div>
+      <span class="text-xs text-slate-300">v1.0 · demo educativa</span>
+    </header>
+
+    <!-- CONTENIDO -->
+    <main class="p-6 max-w-6xl mx-auto">
+      <!-- BARRA DE BÚSQUEDA / CONTROLES -->
+      <section class="mb-6 flex flex-col gap-3 md:flex-row md:items-center md:justify-between">
+        <div class="flex items-center gap-2 w-full md:max-w-md">
+          <input
+            id="input-busqueda"
+            type="text"
+            placeholder="Buscar videojuego..."
+            class="w-full rounded-lg border border-slate-200 px-3 py-2 text-sm focus:outline-none focus:ring-2 focus:ring-slate-400"
+          />
+          <button
+            id="btn-buscar"
+            class="px-4 py-2 bg-slate-900 text-white rounded-lg text-sm hover:bg-slate-800"
+          >
+            Buscar
+          </button>
+        </div>
+
+        <div class="flex gap-2">
+          <!-- FILTRO POR TIENDA -->
+          <select
+            id="select-tienda"
+            class="rounded-lg border border-slate-200 px-3 py-2 text-sm bg-white focus:outline-none focus:ring-2 focus:ring-slate-400"
+          >
+            <option value="">Todas las tiendas</option>
+            <option value="1">Steam</option>
+            <option value="7">Epic Games</option>
+            <option value="11">Humble Store</option>
+          </select>
+
+          <!-- ORDENAMIENTO -->
+          <select
+            id="select-orden"
+            class="rounded-lg border border-slate-200 px-3 py-2 text-sm bg-white focus:outline-none focus:ring-2 focus:ring-slate-400"
+          >
+            <option value="">Ordenar por</option>
+            <option value="precio-asc">Precio: menor a mayor</option>
+            <option value="precio-desc">Precio: mayor a menor</option>
+          </select>
+        </div>
+      </section>
+
+      <!-- GRID DE VIDEOJUEGOS -->
+      <section>
+        <h2 class="text-lg font-semibold mb-4 text-slate-800">
+          Videojuegos destacados
+        </h2>
+
+        <!-- Estado de carga -->
+        <div id="spinner" class="hidden flex items-center gap-2 text-slate-600 mb-4">
+          <div class="w-5 h-5 border-4 border-slate-400 border-t-transparent rounded-full animate-spin"></div>
+          <span>Cargando videojuegos...</span>
+        </div>
+
+        <!-- Estado de error-->
+        <p id="estado-error" class="text-red-500 mb-3 hidden">
+          ❌ Error al cargar videojuegos
+        </p>
+
+        <!-- Contenedor de tarjetas -->
+        <div
+          id="grid-videojuegos"
+          class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4"
+        ></div>
+
+        <!-- BOTÓN VER MÁS -->
+        <button
+          id="btn-ver-mas"
+          class="mt-8 mx-auto block px-6 py-3 bg-white text-black font-bold border-2 border-blue-500 rounded-xl hover:bg-blue-50 text-lg hidden"
+        >
+        Ver más
         </button>
-      </div>
- 
-      <div class="flex gap-2">
-        <select
-          class="rounded-lg border border-slate-200 px-3 py-2 text-sm bg-white focus:outline-none focus:ring-2 focus:ring-slate-400"
+
+      </section>
+    </main>
+
+    <!-- MODAL DE DETALLE -->
+    <div
+      id="modal"
+      class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden"
+    >
+      <div class="bg-white w-80 p-5 rounded-lg shadow-xl relative">
+        <button
+          id="modal-cerrar"
+          class="absolute top-2 right-2 text-slate-500 hover:text-black"
         >
-          <option value="">Plataforma</option>
-          <option value="pc">PC</option>
-          <option value="ps5">PlayStation</option>
-          <option value="xbox">Xbox</option>
-          <option value="switch">Nintendo Switch</option>
-        </select>
- 
-        <select
-          class="rounded-lg border border-slate-200 px-3 py-2 text-sm bg-white focus:outline-none focus:ring-2 focus:ring-slate-400"
+          ✖
+        </button>
+
+        <img id="modal-img" class="w-full rounded-lg mb-3" />
+        <h2 id="modal-titulo" class="text-xl font-bold"></h2>
+        <p id="modal-precio-normal" class="text-sm text-slate-500"></p>
+        <p id="modal-precio-oferta" class="text-lg font-semibold text-green-600"></p>
+
+        <a
+          id="modal-link"
+          class="mt-3 block text-center bg-slate-900 text-white px-3 py-2 rounded-lg hover:bg-slate-700"
+          target="_blank"
         >
-          <option value="">Ordenar por</option>
-          <option value="rating">Mejor valorados</option>
-          <option value="recent">Más recientes</option>
-          <option value="name">Nombre</option>
-        </select>
+          Ir a la tienda
+        </a>
       </div>
-    </section>
- 
-    <!-- GRID DE VIDEOJUEGOS -->
-    <section>
-      <h2 class="text-lg font-semibold mb-4 text-slate-800">Videojuegos destacados</h2>
+    </div>
 
-      <!-- Estado de carga -->
-      <p id="estado-carga" class="text-sm text-slate-500 mb-3 hidden">
-        Cargando videojuegos...
-      </p>
-
-      <!-- Estado de error-->
-      <p id="estado-error" class="text-red-500 mb-3 hidden">
-        Error al cargar videojuegos
-      </p>
-
-      <div 
-      id="grid-videojuegos"
-      class="grid gap-6 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-        
-      </div>
-    </section>
-  </main>
-  <script src="./script.js"></script>   
-</body>
+    <script src="./script.js"></script>
+  </body>
 </html>
+
     
