--- a/public/index.html
+++ b/public/index.html
@@ -87,9 +87,9 @@
         <!-- BOTÓN VER MÁS -->
         <button
           id="btn-ver-mas"
-          class="mt-8 mx-auto block px-6 py-3 bg-white text-black font-bold border-2 border-blue-500 rounded-xl hover:bg-blue-50 text-lg hidden"
+          class="mt-6 mx-auto block px-4 py-2 bg-white text-black font-bold border border-slate-300 rounded-lg hover:bg-slate-100 hidden"
         >
-        Ver más
+          Ver más
         </button>
 
       </section>
@@ -126,5 +126,3 @@
     <script src="./script.js"></script>
   </body>
 </html>
-
-    
